--- a/css/song.css
+++ b/css/song.css
@@ -42,7 +42,7 @@
   margin: 10px 0;
   color: #999;
 }
-.main .song .songInfo .lyric {
+.main .song .songInfo .lyrics {
   line-height: 23px;
   margin-top: 13px;
 }
