--- a/css/search.css
+++ b/css/search.css
@@ -89,6 +89,16 @@
   border: 1px solid #ccc;
 }
 
+.search-result-title ul li:first-child {
+  padding-left: 50px;
+  flex: 7;
+}
+
+.search-result-title ul li:not(:first-child) {
+  flex: 2;
+  text-align: center;
+}
+
 .search-result-list {
   margin-top: 10px;
   width: 100%;
@@ -111,7 +121,9 @@
 }
 
 .search-result-list ul li .name {
+  margin-right: 50px;
   display: flex;
+  flex: 7;
   width: 50%;
   padding-left: 10px;
   line-height: 40px;
@@ -310,3 +322,11 @@ hr{
     margin-right: 20px;
 }
 
+
+.search-result-list ul li .detail {
+  width: 50%;
+  display: flex;
+  flex: 6;
+  justify-content: space-around;
+  align-items: center;
+}
