--- a/css/myMusic.css
+++ b/css/myMusic.css
@@ -16,6 +16,10 @@
   overflow: hidden;
   top: 20px;
 }
+.avatar img {
+  width: 100%;
+  height: 100%;
+}
 
 .avatar_title {
   position: relative;
@@ -215,9 +219,21 @@
 }
 
 .myMusic-result-list ul li .detail {
+  flex: 6;
   width: 50%;
   display: flex;
-  flex: 6;
   justify-content: space-around;
   align-items: center;
+}
+
+.myMusic-result-list ul li .detail a {
+  flex: 1;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.myMusic-result-list ul li .detail a {
+  max-width: 100px;
 }
